# cinema-app

./: .env.example  .gitignore  .helmignore  LICENSE  docker-compose.yml  imdb.py  main.py  pyproject.toml  requirements.txt  test.html  time_common.py
src/backend/: Dockerfile
src/backend/api/: main.py
src/backend/api/routes/: listing.py
src/backend/db/models/: listing.py  movie.py  venue.py
src/backend/db/repo/: db_setup.py  run.py
src/backend/src/api/: main.py
src/backend/src/api/routes/: listing.py
src/backend/src/cinema_app_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backend/src/data_sources/scrapers/: dublin-rathmines.py
src/backend/src/db/models/: __init__.py  listing.py  movie.py  venue.py
src/backend/src/db/repo/: db_setup.py  repo.py  run.py
src/frontend/cinema/: Dockerfile  package-lock.json
src/frontend/cinema/app/: page.tsx
src/frontend/cinema/app/components/: SearchCard.tsx
