[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinema-app-backend"
version = "0.1.0"
description = "Cinema listings backend (FastAPI, scrapers, DB)"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4==4.12.3",
    "psycopg2-binary>=2.9.9",
    "SQLAlchemy==2.0.36",
    "fastapi>=0.115.6,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "requests>=2.32.3,<2.33",
]

[project.optional-dependencies]
dev = ["ruff>=0.9"]

[tool.setuptools.packages.find]
where = ["src/backend/src"]
namespaces = true

[tool.ruff]
target-version = "py39"
src = ["src/backend/src"]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["api", "common", "data_sources", "db", "src"]
split-on-trailing-comma = true
